--- a/leaf_controller/CMakeLists.txt
+++ b/leaf_controller/CMakeLists.txt
@@ -8,7 +8,7 @@ project(leaf_controller)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  rocpp
+  roscpp
   rospy
   std_msgs
 )
@@ -105,7 +105,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES leaf_controller
-#  CATKIN_DEPENDS rocpp rospy std_msgs
+#  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
